--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -821,7 +821,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1glmWLGzpASV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1glmWLGzpASV",
+        "outputId": "cf899697-98c6-42b8-ce68-bf23990b363a"
       },
       "source": [
         "n = 3\n",
@@ -829,26 +833,83 @@
         "PageRank = np.zeros([dim,dim])\n",
         "\n",
         "neighbors = np.zeros([dim, 4], dtype=int)\n",
-        "neighbors[0] = [1,3,0,0]\n",
-        "neighbors[1] = [2,4,0,1]\n",
-        "neighbors[2] = [2,5,1,2]\n",
-        "neighbors[3] = [4,6,3,0]\n",
+        "neighbors[0] = [1,3,-1,-1]\n",
+        "neighbors[1] = [2,4,0,-1]\n",
+        "neighbors[2] = [5,1,-1,-1]\n",
+        "neighbors[3] = [4,6,0,-1]\n",
         "neighbors[4] = [5,7,3,1]\n",
-        "neighbors[5] = [5,8,4,2]\n",
-        "neighbors[6] = [7,6,6,3]\n",
-        "neighbors[7] = [8,7,6,4]\n",
-        "neighbors[8] = [8,8,7,5]\n",
+        "neighbors[5] = [8,4,2,-1]\n",
+        "neighbors[6] = [7,3,-1,-1]\n",
+        "neighbors[7] = [8,6,4,-1]\n",
+        "neighbors[8] = [7,5,-1,-1]\n",
         "\n",
         "# fill the matrix\n",
         "for k in range(dim):\n",
-        "    for i in range(4):\n",
-        "      Kbout=numpy.sum\n",
-        "      PageRank[neighbors[k, i], k] += 0.25\n",
+        "    Kbout=np.sum(neighbors[k, :]>-1) #Number of neighbors\n",
+        "    print(Kbout)\n",
+        "    for i in range(len(neighbors[k, :])):\n",
+        "      if neighbors[k, i]>-1 :\n",
+        "        PageRank[neighbors[k, i], k] += 1/Kbout\n",
         "    \n",
-        "print(markov)"
+        "print(PageRank)\n",
+        "print(np.sum(PageRank, axis=0))\n",
+        "\n",
+        "# get eigenvalues and eigenvectors\n",
+        "eigvals, eigvects = np.linalg.eig(PageRank)\n",
+        "print(eigvals)\n",
+        "\n",
+        "# there should be a 1 in the array\n",
+        "print(eigvects[:,0])\n",
+        "\n",
+        "\n",
+        "print(\"Periodic but reducible\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "3\n",
+            "2\n",
+            "[[0.         0.33333333 0.         0.33333333 0.         0.\n",
+            "  0.         0.         0.        ]\n",
+            " [0.5        0.         0.5        0.         0.25       0.\n",
+            "  0.         0.         0.        ]\n",
+            " [0.         0.33333333 0.         0.         0.         0.33333333\n",
+            "  0.         0.         0.        ]\n",
+            " [0.5        0.         0.         0.         0.25       0.\n",
+            "  0.5        0.         0.        ]\n",
+            " [0.         0.33333333 0.         0.33333333 0.         0.33333333\n",
+            "  0.         0.33333333 0.        ]\n",
+            " [0.         0.         0.5        0.         0.25       0.\n",
+            "  0.         0.         0.5       ]\n",
+            " [0.         0.         0.         0.33333333 0.         0.\n",
+            "  0.         0.33333333 0.        ]\n",
+            " [0.         0.         0.         0.         0.25       0.\n",
+            "  0.5        0.         0.5       ]\n",
+            " [0.         0.         0.         0.         0.         0.33333333\n",
+            "  0.         0.33333333 0.        ]]\n",
+            "[1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            "[ 1.00000000e+00+0.00000000e+00j -1.00000000e+00+0.00000000e+00j\n",
+            " -5.77350269e-01+0.00000000e+00j -5.77350269e-01+0.00000000e+00j\n",
+            "  5.77350269e-01+0.00000000e+00j  5.77350269e-01+0.00000000e+00j\n",
+            " -5.48890034e-33+6.04419097e-17j -5.48890034e-33-6.04419097e-17j\n",
+            " -1.27125947e-33+0.00000000e+00j]\n",
+            "[0.24253563+0.j 0.36380344+0.j 0.24253563+0.j 0.36380344+0.j\n",
+            " 0.48507125+0.j 0.36380344+0.j 0.24253563+0.j 0.36380344+0.j\n",
+            " 0.24253563+0.j]\n",
+            "Periodic but reducible\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
