--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -534,7 +534,7 @@
         "import itertools as it\n",
         "import matplotlib.pylab as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -867,7 +867,7 @@
         "print(\"Periodic : We can see from the spectrum that there are two eigenvalues of modulus 1, this is one of the pathologies of the Perron-Frobenius \"\n",
         "\"Theorem : There are two equivalents eigenvectors (one is the opposite of the other, and the eignevalue is -1).\")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,7 +989,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,10 +1053,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Up1KL9lUm2uT",
-        "outputId": "ff11b862-5826-4df0-a7ff-68111bc9c27d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "641e716a-d5e8-402c-df3a-8e4508273245"
       },
       "source": [
         "#HOW TO DOWNLOAD THE DATASET:\n",
@@ -1066,22 +1066,22 @@
         "#from the link https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
         "#and put it in the same folder of the notebook"
       ],
-      "execution_count": 31,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-09-28 13:12:43--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
+            "--2021-09-28 13:42:17--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 520226 (508K) [text/plain]\n",
-            "Saving to: ‘adj_list.txt’\n",
+            "Saving to: ‘adj_list.txt.1’\n",
             "\n",
-            "adj_list.txt        100%[===================>] 508.03K  --.-KB/s    in 0.07s   \n",
+            "adj_list.txt.1      100%[===================>] 508.03K  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2021-09-28 13:12:45 (7.46 MB/s) - ‘adj_list.txt’ saved [520226/520226]\n",
+            "2021-09-28 13:42:17 (9.81 MB/s) - ‘adj_list.txt.1’ saved [520226/520226]\n",
             "\n"
           ]
         }
@@ -1125,7 +1125,7 @@
         "# the variable A contains the adjacency matrix of the network\n",
         "# the variable n_nodes contains the number of nodes of the network"
       ],
-      "execution_count": 32,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1156,13 +1156,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6jziez6Fc2bP"
+        "id": "6jziez6Fc2bP",
+        "outputId": "08f471d8-1411-4a08-f520-b9d3f58afac2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "print(\"QUestion 8\")\n",
+        "print(\"In-degree of each paper\")\n",
+        "\n",
+        "N=np.zeros([len(A),1])\n",
+        "for k in range(len(A)):\n",
+        "  N[k]+=sum(A[k,:]);\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "QUestion 8\n",
+            "In-degree of each paper\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
