--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -1157,20 +1157,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "6jziez6Fc2bP",
-        "outputId": "08f471d8-1411-4a08-f520-b9d3f58afac2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c762d9ac-2e86-4ea0-e332-90ff298387b8"
       },
       "source": [
         "print(\"QUestion 8\")\n",
         "print(\"In-degree of each paper\")\n",
         "\n",
-        "N=np.zeros([len(A),1])\n",
+        "N=[]\n",
         "for k in range(len(A)):\n",
-        "  N[k]+=sum(A[k,:]);\n"
+        "  N.append(sum(A[k,:]));\n"
       ],
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,13 +1185,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rYiWp6ekc4KQ"
+        "id": "rYiWp6ekc4KQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41b2ec23-9da7-4078-c415-3bca40fb816c"
       },
       "source": [
-        ""
+        "print(\"With the in-degree as a measure we have a rank of the 10 most important articles , from the 10th to the first:\")\n",
+        "M=np.argsort(N);\n",
+        "print(M[len(A)-10:len(A)])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "With the in-degree as a measure we have a rank of the 10 most important articles , from the 10th to the first:\n",
+            "[1063 4955 1533 3902 1031 2079  375 3903 3900 1367]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
