--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -1209,6 +1209,68 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K3wXWG98ve6s",
+        "outputId": "f778aa13-ad45-4aee-e2f5-a5ce13785b4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"Question 9\")\n",
+        "\n",
+        "#Let's build a Markov Matrix associated to the case of the dataset\n",
+        "d=0.85;\n",
+        "dim = len(A)\n",
+        "SpiderPageRank2 = np.zeros([len(A),len(A)])\n",
+        "\n",
+        "# fill the matrix\n",
+        "for k in range(dim):\n",
+        "    Kbout=np.sum(A[:, k]) #Number of neighbors\n",
+        "    SpiderPageRank2[:,k] += (1/Kbout)*d*A[:,k] + (1-d)/dim;\n",
+        "\n"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Question 9\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:11: RuntimeWarning: divide by zero encountered in longlong_scalars\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:11: RuntimeWarning: invalid value encountered in multiply\n",
+            "  # This is added back by InteractiveShellApp.init_path()\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9999999999999998\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cUknEVHp1Oua"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 130,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-NdUQbYfTke2"
