--- a/HW1VF.ipynb
+++ b/HW1VF.ipynb
@@ -868,7 +868,7 @@
         "print(\"Periodic : We can see from the spectrum that there are two eigenvalues of modulus 1, this is one of the pathologies of the Perron-Frobenius \"\n",
         "\"Theorem : There are two equivalents eigenvectors (one is the opposite of the other, and the eignevalue is -1).\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1008,7 +1008,7 @@
         "\n",
         "print(\"From this computation we see that after a certain time, a random vector becomes equal to the stationnary vector\")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,7 +1090,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f634e836-a880-4c8f-bd78-d34329871e30"
+        "outputId": "fefef3eb-8dfa-459b-bbef-b8b236b31d16"
       },
       "source": [
         "#HOW TO DOWNLOAD THE DATASET:\n",
@@ -1100,22 +1100,22 @@
         "#from the link https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
         "#and put it in the same folder of the notebook"
       ],
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-09-28 14:57:14--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
+            "--2021-09-29 12:04:21--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/adj_list.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 520226 (508K) [text/plain]\n",
-            "Saving to: ‘adj_list.txt.2’\n",
+            "Saving to: ‘adj_list.txt’\n",
             "\n",
-            "adj_list.txt.2      100%[===================>] 508.03K  --.-KB/s    in 0.07s   \n",
+            "\radj_list.txt          0%[                    ]       0  --.-KB/s               \radj_list.txt        100%[===================>] 508.03K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2021-09-28 14:57:15 (7.17 MB/s) - ‘adj_list.txt.2’ saved [520226/520226]\n",
+            "2021-09-29 12:04:21 (13.5 MB/s) - ‘adj_list.txt’ saved [520226/520226]\n",
             "\n"
           ]
         }
@@ -1159,7 +1159,7 @@
         "# the variable A contains the adjacency matrix of the network\n",
         "# the variable n_nodes contains the number of nodes of the network"
       ],
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1194,7 +1194,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c762d9ac-2e86-4ea0-e332-90ff298387b8"
+        "outputId": "92d3fbfb-822d-4141-ad90-35d435848659"
       },
       "source": [
         "print(\"QUestion 8\")\n",
@@ -1204,7 +1204,7 @@
         "for k in range(len(A)):\n",
         "  N.append(sum(A[k,:]));\n"
       ],
-      "execution_count": 92,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1223,14 +1223,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41b2ec23-9da7-4078-c415-3bca40fb816c"
+        "outputId": "4ac35850-b4f0-498e-f461-01e79b35d67e"
       },
       "source": [
         "print(\"With the in-degree as a measure we have a rank of the 10 most important articles , from the 10th to the first:\")\n",
         "M=np.argsort(N);\n",
         "print(M[len(A)-10:len(A)])"
       ],
-      "execution_count": 104,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1249,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K3wXWG98ve6s",
-        "outputId": "8ee235e2-79cf-481a-933e-a22cae5eb581"
+        "outputId": "25d0f7a2-0d9f-42be-dc4e-887cd872a541"
       },
       "source": [
         "print(\"Question 9\")\n",
@@ -1265,19 +1265,23 @@
         "    if Kbout>0:\n",
         "      SpiderPageRank2[:,k] = (1/Kbout)*d*A[:,k] + (1-d)/dim;\n",
         "    else :\n",
-        "      SpiderPageRank2[:,k] = (1-d)/dim\n",
+        "      SpiderPageRank2[:,k] = (1-d)/dim \n",
+        "      #SpiderPageRank2[k,k]+= d\n",
+        "print(\"The computation SpiderPageRank2[:,k] = 1/dim could be explained by the fact that the scalar d has been added to the system to avoid spider net, However\",\n",
+        "      \"\")\n",
         "\n",
         "\n",
         "print(np.sum(np.sum(SpiderPageRank2,axis=0))/len(A)) \n",
         "print('The closet to 1 this value is, the better it is because it means that proba is conserved')\n"
       ],
-      "execution_count": 44,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Question 9\n",
+            "The computation SpiderPageRank2[:,k] = 1/dim could be explained by the fact that the scalar d has been added to the system to avoid spider net, However \n",
             "0.8847244261076773\n",
             "The closet to 1 this value is, the better it is because it means that proba is conserved\n"
           ]
@@ -1291,7 +1295,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cUknEVHp1Oua",
-        "outputId": "3213fb3d-a7c7-4026-c95b-b5090565f988"
+        "outputId": "4139ca31-c2c8-4a66-ac4c-62a04915f155"
       },
       "source": [
         "prob = np.random.rand(dim)\n",
@@ -1306,18 +1310,34 @@
         "M=np.argsort(prob);\n",
         "print(M[len(A)-10:len(A)])"
       ],
-      "execution_count": 46,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Initial vector: [3.64372047e-05 3.68256352e-05 1.03229585e-04 ... 3.30586799e-05\n",
-            " 4.62500125e-05 8.37749842e-05]\n",
-            "[11626 10844  2005  2006  5841  5842  3721  3720   559   560]\n"
+            "Initial vector: [1.01430529e-04 7.43879140e-05 1.00150820e-04 ... 2.50682757e-05\n",
+            " 1.00898163e-04 7.43757938e-05]\n",
+            "[11626 10844  2006  2005  5841  5842  3721  3720   559   560]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uIe9ecr-nLbJ"
+      },
+      "source": [
+        "print(Question 10)\n",
+        "#The previous N list is the In degree\n",
+        "O=[]\n",
+        "for k in range(len(A)):\n",
+        "  O.append(sum(A[:,k]));\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
