--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -91,7 +91,7 @@
         "import matplotlib.pyplot as plt\n",
         "import json"
       ],
-      "execution_count": 1,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -112,33 +112,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0269e81c-37f1-48a9-c25c-2dab8f10828c"
+        "outputId": "6b3559a0-65d5-4df9-c032-8693ca36f5c1"
       },
       "source": [
         "#this are the data used for plotting the map of Paris\n",
         "! wget \"https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-01 13:49:17--  https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\n",
+            "--2021-10-12 17:19:29--  https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\n",
             "Resolving github.com (github.com)... 140.82.112.3\n",
             "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv [following]\n",
-            "--2021-10-01 13:49:17--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv\n",
+            "--2021-10-12 17:19:29--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 104777 (102K) [text/plain]\n",
-            "Saving to: ‘arrondissements-millesimes0.csv’\n",
+            "Saving to: ‘arrondissements-millesimes0.csv.1’\n",
             "\n",
-            "\r          arrondiss   0%[                    ]       0  --.-KB/s               \rarrondissements-mil 100%[===================>] 102.32K  --.-KB/s    in 0.02s   \n",
+            "arrondissements-mil 100%[===================>] 102.32K  --.-KB/s    in 0.02s   \n",
             "\n",
-            "2021-10-01 13:49:17 (6.04 MB/s) - ‘arrondissements-millesimes0.csv’ saved [104777/104777]\n",
+            "2021-10-12 17:19:29 (4.94 MB/s) - ‘arrondissements-millesimes0.csv.1’ saved [104777/104777]\n",
             "\n"
           ]
         }
@@ -164,7 +164,7 @@
         "# by using plt.plot(coords[0][:,0],coords[0][:,1]) you can plot the whole arrondissement.\n",
         "# the important variables here are 'coords' and 'arr_names' i.e. the coordinates and the name of the arrondissement."
       ],
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1655007f-0892-4811-b7ab-d3b22face881"
+        "outputId": "182a7d76-bce2-48fb-e47a-71e561dd9a9f"
       },
       "source": [
         "#this is the data used for plotting the map of Paris\n",
@@ -204,49 +204,49 @@
         "! wget \"https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\"\n",
         "! wget \"https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-01 13:49:20--  https://github.com/Schimmenti/NumPhysENS/raw/master/network_nodes.csv\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "--2021-10-12 17:19:36--  https://github.com/Schimmenti/NumPhysENS/raw/master/network_nodes.csv\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv [following]\n",
-            "--2021-10-01 13:49:21--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv\n",
+            "--2021-10-12 17:19:36--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 707846 (691K) [text/plain]\n",
-            "Saving to: ‘network_nodes.csv’\n",
+            "Saving to: ‘network_nodes.csv.1’\n",
             "\n",
-            "network_nodes.csv   100%[===================>] 691.26K  --.-KB/s    in 0.05s   \n",
+            "network_nodes.csv.1 100%[===================>] 691.26K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2021-10-01 13:49:21 (14.6 MB/s) - ‘network_nodes.csv’ saved [707846/707846]\n",
+            "2021-10-12 17:19:36 (15.7 MB/s) - ‘network_nodes.csv.1’ saved [707846/707846]\n",
             "\n",
-            "--2021-10-01 13:49:21--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "--2021-10-12 17:19:36--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 649891 (635K) [text/plain]\n",
-            "Saving to: ‘network_combined.csv’\n",
+            "Saving to: ‘network_combined.csv.1’\n",
             "\n",
             "network_combined.cs 100%[===================>] 634.66K  --.-KB/s    in 0.04s   \n",
             "\n",
-            "2021-10-01 13:49:21 (14.7 MB/s) - ‘network_combined.csv’ saved [649891/649891]\n",
+            "2021-10-12 17:19:37 (14.5 MB/s) - ‘network_combined.csv.1’ saved [649891/649891]\n",
             "\n",
-            "--2021-10-01 13:49:21--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2021-10-12 17:19:37--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 4704878 (4.5M) [text/plain]\n",
-            "Saving to: ‘network_walk.csv’\n",
+            "Saving to: ‘network_walk.csv.1’\n",
             "\n",
-            "network_walk.csv    100%[===================>]   4.49M  --.-KB/s    in 0.08s   \n",
+            "network_walk.csv.1  100%[===================>]   4.49M  --.-KB/s    in 0.08s   \n",
             "\n",
-            "2021-10-01 13:49:21 (59.6 MB/s) - ‘network_walk.csv’ saved [4704878/4704878]\n",
+            "2021-10-12 17:19:37 (59.7 MB/s) - ‘network_walk.csv.1’ saved [4704878/4704878]\n",
             "\n"
           ]
         }
@@ -290,7 +290,7 @@
         "    for _,line in g.iterrows():\n",
         "      durations[id][line.to_stop_I] = line.duration"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -321,11 +321,32 @@
         "    previous_node[k] = None\n",
         "  #naturally 'source' has duration '0' from itself\n",
         "  dur_src[source] = 0\n",
-        "  \n",
-        "  \n",
+        "  border = sorted(dur_src, key = lambda k:dur_src[k])\n",
         "  #you complete\n",
-        "\n",
+        "  border = sorted(dur_src, key = lambda k:dur_src[k])\n",
+        "  while(len(border)>0):\n",
+        "    next_node = border.pop(0)\n",
+        "    #initially next node is source\n",
+        "    for neighboor in net[next_node]:\n",
+        "     if neighboor in border :\n",
+        "        Dure=dur_src[next_node]+durations[next_node][neighboor]\n",
+        "        if Dure < dur_src[neighboor] :\n",
+        "          dur_src[neighboor]=Dure ;\n",
+        "          previous_node[neighboor] = next_node ;\n",
+        "    border = sorted(border, key = lambda k:dur_src[k])\n",
+        "  \n",
         "  return dur_src, previous_node"
+      ],
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MB74IEHCFw5h"
+      },
+      "source": [
+        "print(dijkstra(net, durations, 1455))"
       ],
       "execution_count": null,
       "outputs": []
